# carAssist

./: .gitignore  README.md
CarAssist/: CMakeLists.txt  notes.txt
CarAssist.xcodeproj/: project.pbxproj
CarAssist.xcodeproj/project.xcworkspace/xcuserdata/jeanb.xcuserdatad/: UserInterfaceState.xcuserstate
CarAssist.xcodeproj/xcshareddata/xcschemes/: CarAssist.xcscheme
CarAssist.xcodeproj/xcuserdata/jeanb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CarAssist.xcodeproj/xcuserdata/jeanb.xcuserdatad/xcschemes/: xcschememanagement.plist
CarAssist/src/: CMakeLists.txt  ai.cpp  ai.hpp  imageProcessing.cpp  imageProcessing.hpp  laneDetection.cpp  laneDetection.hpp  main.cpp  stereo.cpp  stereo.hpp  videoAnalysis.cpp  videoAnalysis.hpp
CarAssist/test/: CMakeLists.txt  test_image_processing.cpp
